@@ -5,13 +5,14 @@
 		<setting id="password" type="text" label="30002" option="hidden" default="" />
 		<setting id="start_with_tv" type="bool" label="30020" default="false" />
 		<setting id="showcurrent" type="bool" label="30022" default="true" />
-		<setting id="ask_adjust" type="bool" label="30010" default="false" />
+		<setting id="ask_adjust" type="bool" label="30010" default="true" />
+		<setting id="auto_timezone" type="bool" label="30043" default="false" />
 		<setting id="separator" type="lsep" label=""/>
 		<setting id="protected_code" type="text" label="30026" option="hidden" default="" />
 	</category>
 	<category label="31002">
 		<setting id="show_protected" type="bool" label="30015" default="true" />
-		<setting id="autorefresh_rate" type="enum" values="0|1|2|3|5|10" label="30027" default="2" />
+		<setting id="autorefresh_rate" type="enum" values="0|1|2|3|5|10" label="30027" default="0" />
 		<setting id="always_refresh" type="bool" label="30028" default="true" />
 		<setting id="show_time_field" type="enum" lvalues="30031|30032|30033|30034|30035|30040" label="30036" default="5" />
 		<setting id="colorize_groups" type="bool" label="30030" default="true" />
